refactor(todolist): update TodoListResource and TodoListService for DTO separation and void delete
- separate CreateTodoListDTO and UpdateTodoListDTO in resource and mapper
- update service to set timestamps and updatedBy internally
- change delete method to void and remove boolean return
- update tests to reflect changes and fix delete test with doNothing
- remove obsolete delete test for non-existing id in resource test